manifests/devops/jenkins/jenkins.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: agent
          containerPort: 50000
        volumeMounts:
        - name: jenkins
          mountPath: /var/jenkins
        livenessProbe:
          httpGet:
            path: /login
            port: 8080
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
      volumes:
      - name: jenkins
        emptyDir: {}
