manifests/devops/jenkins/jenkins.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/part-of: jenkins
    app.kubernetes.io/component: devops
spec:
  selector:
    app.kubernetes.io/name: jenkins
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: agent
      port: 50000
      targetPort: agent
