manifests/devops/jenkins/jenkins.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/part-of: jenkins
    app.kubernetes.io/component: devops
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port: 
                  name: http
